k8s/infra/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: portfolio
spec:
  stripPrefix:
    prefixes:
      - /api
